# ClusterSage

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  cli.py  config.py  main.py  schemas.py  storage.py
app/api/: __init__.py  routes.py
app/core/: __init__.py  config.py  constants.py  logging.py
app/eval/: __init__.py  baselines.py  benchmark.py  datasets.py  metrics.py  perturb.py  reports.py
app/incidents/: __init__.py  cluster.py  evidence.py  summarize.py
app/ingest/: __init__.py  loader.py  metadata.py  parsers.py
app/llm/: __init__.py  client.py  guardrails.py  prompts.py
app/models/: __init__.py  db.py  entities.py  schemas.py
app/normalize/: __init__.py  canonicalize.py  rules.py  tokenizer.py
app/report/: __init__.py  render_html.py  render_markdown.py
app/report/templates/: report.html.j2
app/scoring/: __init__.py  burst.py  novelty.py  ranker.py  rarity.py  windows.py
app/templates/: __init__.py  drain_like.py  extractor.py  similarity.py
app/utils/: __init__.py  files.py  text.py  time.py
configs/: default.yaml  eval.yaml  normalization.yaml  scoring.yaml
data/benchmarks/sample_parser_eval/: labels.json  logs.txt
data/raw/sample_run/: benchmark_manifest.json  scheduler_node01.txt
notebooks/: exploratory.ipynb
tests/: test_cli.py  test_eval.py  test_incidents.py  test_ingest.py  test_normalize.py  test_scoring.py  test_storage.py  test_templates.py
