[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clustersage"
version = "0.1.0"
description = "MVP log-triage scaffold for distributed compute and GPU-cluster environments."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "ClusterSage Contributors" }
]
dependencies = [
  "duckdb>=1.0.0",
  "fastapi>=0.115.0",
  "jinja2>=3.1.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "pyyaml>=6.0.1",
  "typer>=0.12.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "ipykernel>=6.29.0",
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[project.scripts]
clustersage = "app.cli:app"

[tool.setuptools]
packages = [
  "app",
  "app.api",
  "app.core",
  "app.models",
  "app.ingest",
  "app.normalize",
  "app.templates",
  "app.scoring",
  "app.incidents",
  "app.report",
  "app.llm",
  "app.utils",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
